# ailin

./: .env.dev  .gitignore  README.md  bot.py  pyproject.toml
bot/: bot.py
data/: lyrics.txt
data/bank/: 银行列表.json
data/bank/银行/: 丝绸之路.json  于塗银行.json  云茵飞酱.json  利息银行.json  匿名很行.json  天地银行.json  宝宝巴士.json  小郭郭银行.json  帅男银行.json  抽奖贷.json  新丝绸之路.json  款某银行.json  注资银行.json  渊郭银行.json  玛卡银行.json  真·玛卡银行.json  美联储.json  茗念宝贝.json  靓仔银行.json
data/bottle/: data.json
data/farm/: 为所有用户增加默认收割时间.py
data/game/: 数据.json
data/艾琳/: 为所有用户增加存款信息.py  为所有用户增加默认宠物.py  为所有用户增加默认服饰.py  为所有用户增加默认段位.py  为所有用户增加默认称号.py  为所有用户增加默认饰品.py  存档路径变更.py  整理用户卡包内容.py  群存档路径变更.py
plugins/: fun.py  若要开发，请在这里创建文件夹
plugins/AI写歌词/: __init__.py  main.py
plugins/AI对联/: __init__.py
plugins/chess/: __init__.py  game.py
plugins/光遇/: __init__.py
plugins/写歌词/: __init__.py  main.py  训练.py
plugins/农场/: __init__.py  farm.py
plugins/对战/: __init__.py  main.py
plugins/对联/: __init__.py
plugins/新插件/: __init__.py
plugins/漂流瓶/: __init__.py
plugins/点歌/: __init__.py  data_source.py
plugins/狼人杀/: __init__.py
plugins/艾琳/: __init__.py  pyproject.toml  requirements.txt
plugins/银行/: __init__.py  bank.py
resource/farm/: 价格.json  农场菜单.md  功能.json  原料.json  图鉴.json  图鉴.md  时间.json  附加品.json
resource/wzry/: 英雄列表.json  英雄词典.json
resource/对战/: 英雄奖池.json
resource/对战/arms/: 合成表.md  法术1星.json  法术2星合成表.json  法术3星.json  物理1星.json  物理2星合成表.json  物理3星.json  防御1星.json  防御2星合成表.json  防御3星.json
resource/对战/head/: 新建 文本文档 (2).txt
resource/对战/heroes/: herolist.json  孙策.json  孙策.md  王昭君.json  王昭君.md  鲁班七号.json  鲁班七号.md
resource/对战/lines/: 周瑜.json  大乔.json  孙尚香.json  孙策.json  小乔.json  小鱼.json  庄周.json  戈娅.json  武则天.json  王昭君.json  瑶.json  艾琳.json  诸葛亮.json  鲁班七号.json
weights/: 此处放入模型
wzry/: 英雄列表.json  英雄词典.json
