[tool.poetry]
name = "Ailin"
version = "2.0.0-rc.1"
description = "艾琳，qq聊天机器人"
authors = ["苯 <3142331296@qq.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nonebot]
plugins = []
plugin_dirs = ["plugins"]
