[tool.poetry]
name = "nonebot-plugin-ailin"
version = "1.0.0"
description = "艾琳"
authors = ["苯 <3142331296@qq.com>"]
readme = "README.md"
license = "AGPL"
keywords = ["nonebot", "nonebot2", "ailin"]
homepage =
repository = 
documentation = 
packages = [
    { include = "nonebot_plugin_ailin/*.py", from = ".."}
]

[[tool.poetry.source]]
name = "ali"
default = true
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"
nonebot-plugin-apscheduler = "^0.1.2"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
